Fix: alignment

--- a/component-library/components/generic/custom-embed/custom-embed.scss
+++ b/component-library/components/generic/custom-embed/custom-embed.scss
@@ -1,8 +1,6 @@
 .c-custom-embed {
     aspect-ratio: var(--c-custom-embed-ratio);
     width: 100%;
-    display:flex;
-    justify-content: center;
 
     iframe {
         border:none;
