--- a/component-library/components/sections/embed/embed.scss
+++ b/component-library/components/sections/embed/embed.scss
@@ -16,7 +16,7 @@
         gap: 24px;
     }
     
-    &--content-align-center &__embed  {
+    &--content-align-center .c-custom-embed  {
         display: flex;
         justify-content: center;
     }
